<resources>
    <string name="app_name">Shoe Store app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_mes">welcome, Happy working day</string>
    <string name="welcome_onBoarding">welcome, OnBoarding Screen</string>
    <string name="email">Email</string>

    <string name="enter_your_pass">password</string>
    <string name="login">sign in</string>
    <string name="login_existing_account">sign in with an existing account</string>

    <string name="error_empty_field">Error!, field is empty</string>
    <string name="error_invalid_field">Error!, field is wrong</string>
    <string name="error_invalid_email">Error!, email is wrong</string>
    <string name="error_invalid_field_less_character">Error!, the field is less than the required characters</string>
    <string name="error_invalid_field_special_character"><![CDATA[Username must not contain .*[~!@#$%^&*()_=+|/,.\"\';:{}<>?].*]]></string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="home">Home Shoe List</string>
    <string name="instructions">Instructions</string>
    <string name="onboarding">onboarding</string>
    <string name="instructions_screen">Instructions Screen</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_name_">Shoe Name :</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="company">Company</string>
    <string name="company_">Company :</string>
    <string name="enter_company">Enter Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_size_">Shoe Size :</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
    <string name="description">Description</string>
    <string name="description_">Description :</string>
    <string name="enter_description">Enter Description</string>
    <string name="save_shoe">Save Shoe</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_shoe">Add New Shoe</string>

    <string name="succesLogin">You are logged in successfully</string>
    <string name="m_name_required">Name is required</string>
    <string name="m_company_required">Company is required</string>
    <string name="m_size_required">Size is required</string>
    <string name="m_dec_required">Description is required</string>
    <string name="m_name_invalid">Name is Invalid</string>
    <string name="m_company_invalid">Company is Invalid</string>
    <string name="m_size_invalid">Size is Invalid</string>
    <string name="m_size_invalid_length">Size is Invalid ,max 2 characters</string>
    <string name="m_dec_invalid">Description is Invalid , max 250 characters</string>
    <string name="add_shoes">Add Shoes</string>

    <string name="menu_txt_main_screen">Shoe listing</string>
    <string name="menu_txt_main_detail_screen">Detail Shoe</string>

</resources>